Fix CloudFront distribution ID reference

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,4 +28,4 @@ jobs:
       run: aws s3 sync site/ s3://cloud-resume-challenge-raman-2025 --delete  # Only site/; replace bucket
     - name: Invalidate CloudFront Cache
       if: steps.changes.outputs.changes == 'true'
-      run: aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID r}} --paths "/*"
+      run: aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
